<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="52dp"
        android:gravity="center_vertical"
        android:text="@string/first_textView"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/first_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_number"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/first_number_hint"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="52dp"
        android:gravity="center_vertical"
        android:text="@string/second_textView"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/second_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <EditText
        android:id="@+id/second_number"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/second_number_hint"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/first_number" />

    <Button
        android:id="@+id/button"
        android:layout_width="139dp"
        android:layout_height="57dp"
        android:layout_marginTop="90dp"
        android:text="@string/Button_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <TextView
        android:id="@+id/result"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/result_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/result_value"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/result"
        app:layout_constraintTop_toTopOf="@+id/result" />

</androidx.constraintlayout.widget.ConstraintLayout>